Modal confirmation is done

--- a/TeslaRent_Server/Pages/_Layout.cshtml
+++ b/TeslaRent_Server/Pages/_Layout.cshtml
@@ -40,5 +40,10 @@
 
     @*43 Подключаем js Sweet Alerts 2*@
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+    @*74. Вставляем скрипт FontAwesome*@
+    <script src="https://kit.fontawesome.com/e4fa5c8403.js" crossorigin="anonymous"></script>
+   
+
 </body>
 </html>
