--- a/TeslaRent_Server/Pages/Car/CreateCar.razor
+++ b/TeslaRent_Server/Pages/Car/CreateCar.razor
@@ -15,101 +15,66 @@
 @inject IFileUpload _fileUpload
 @*62.3 Идём в класс Program и конфигурируем зависимость загрузчика*@
 
-@*65.3 Внедряем зависимость репозитория картинок*@
-@inject ITeslaCarImageRepository _imageRepository
-@*************************************************************@
-
 <div class="row mt-2 mb-5">
-    <h3 class="card-title text-info mb-3 ml-3">@title Car</h3>
-    <div class="col-12">
-        <div class="card">
-            <div class="card-body" style="background-color: #004bff0f">
-                @*29.2 Добавляем форму Blazor, которая требует модели*@
-                <EditForm Model="carModel" OnValidSubmit="CreateUpdateCarHandler">
+	<h3 class="card-title text-info mb-3 ml-3">@title Car</h3>
+	<div class="col-12">
+		<div class="card">
+			<div class="card-body" style="background-color: #004bff0f">
+				@*29.2 Добавляем форму Blazor, которая требует модели*@
+				<EditForm Model="carModel" OnValidSubmit="CreateUpdateCarHandler">
 
-                    <DataAnnotationsValidator />
-                    <ValidationSummary />
+					<DataAnnotationsValidator />
+					<ValidationSummary />
 
-                    <div class="form-group mb-3">
-                        <label>Name</label>
-                        <InputText @bind-Value="carModel.Name" class="form-control" placeholder="Enter car name..." />
-                        <ValidationMessage For="()=> carModel.Name" />
-                    </div>
-                    <div class="form-group mb-3">
-                        <label>Occupancy</label>
-                        <InputNumber @bind-Value="carModel.Occupancy" class="form-control" />
-                        <ValidationMessage For="()=> carModel.Occupancy" />
-                    </div>
-                    <div class="form-group mb-3">
-                        <label>Regular Rate</label>
-                        <InputNumber @bind-Value="carModel.RegularRate" class="form-control" />
-                        <ValidationMessage For="()=> carModel.RegularRate" />
-                    </div>
-                    <div class="form-group mb-3">
-                        <label>Number Of Seats</label>
-                        <InputText @bind-Value="carModel.NumberOfSeats" class="form-control" placeholder="Enter number of seats..." />
-                        <ValidationMessage For="()=> carModel.NumberOfSeats" />
-                    </div>
-                    <div class="form-group mb-3">
-                        <label>Details</label>
-                        <InputTextArea @bind-Value="carModel.Details" class="form-control" placeholder="Enter car description..." />
-                        <ValidationMessage For="()=> carModel.Details" />
-                    </div>
+					<div class="form-group mb-3">
+						<label>Name</label>
+						<InputText @bind-Value="carModel.Name" class="form-control" placeholder="Enter car name..." />
+						<ValidationMessage For="()=> carModel.Name" />
+					</div>
+					<div class="form-group mb-3">
+						<label>Occupancy</label>
+						<InputNumber @bind-Value="carModel.Occupancy" class="form-control" />
+						<ValidationMessage For="()=> carModel.Occupancy" />
+					</div>
+					<div class="form-group mb-3">
+						<label>Regular Rate</label>
+						<InputNumber @bind-Value="carModel.RegularRate" class="form-control" />
+						<ValidationMessage For="()=> carModel.RegularRate" />
+					</div>
+					<div class="form-group mb-3">
+						<label>Number Of Seats</label>
+						<InputText @bind-Value="carModel.NumberOfSeats" class="form-control" placeholder="Enter number of seats..." />
+						<ValidationMessage For="()=> carModel.NumberOfSeats" />
+					</div>
+					<div class="form-group mb-3">
+						<label>Details</label>
+						<InputTextArea @bind-Value="carModel.Details" class="form-control" placeholder="Enter car description..." />
+						<ValidationMessage For="()=> carModel.Details" />
+					</div>
 
-                    @*60.1 Реализовать вывод компонента загрузки файлов*@
-                    <div class="form-group mb-3">
-                        <InputFile OnChange="ImageUploadHandler" multiple></InputFile>
-                    </div>
-                    @*////////////////////////////////////////////*@
+					@*60.1 Реализовать вывод компонента загрузки файлов*@
+					<div class="form-group mb-3">
+						<InputFile OnChange="ImageUploadHandler" multiple></InputFile>
+					</div>
+					@*/////////////////////////////////////////////////*@
 
-                    @*72. Отображаем индикатор загрузки*@
-                    @if (uploadsStart)
-                    {
-                        <div class="col">
-                            <span><i class="fas fa-spinner"></i>Please, wait when images are uploading ...</span>
-                        </div>
-                    }
-
-                    @*//////////////////////////////*@
-
-                    @*63. Блок вывода картинок*@
-                    <div class="row mb-3">
-                        @if (carModel.ImageUrls is not null && carModel.ImageUrls.Any())
-                        {
-                            int imageCount = 1;
-                            foreach (var item in carModel.ImageUrls)
-                            {
-                                <div class="col-sm-12 col-md-4 col-xl-3 mt-3">
-                                    <div class="car-image" style="background: url('@item') 50% 50%;">
-                                        <span class="car-image-title">@imageCount</span>
-                                        <span class="car-image-header"></span>
-                                        @*69.1 Добавить событие нажатия по кнопке*@
-                                        <button class="btn btn-outline-danger btn-block car-image-delete-button" type="button" @onclick="() => DeleteImage(item)"><span class="oi oi-trash"></span></button>
-                                    </div>
-                                </div>
-                                imageCount++;
-                            }
-                        }
-                    </div>
-                    @*////////////////////////////////////////////*@
-
-                    <button class="btn btn-outline-primary" type="submit">@title Car</button>
-                    <NavLink href="car-list" class="btn btn-outline-success">Back To Car List</NavLink>
-                </EditForm>
-            </div>
-        </div>
-    </div>
+					<button class="btn btn-outline-primary" type="submit">@title Car</button>
+					<NavLink href="car-list" class="btn btn-outline-success">Back To Car List</NavLink>
+				</EditForm>
+			</div>
+		</div>
+	</div>
 </div>
 
 
 @code {
-    // 46.3 Добавляем свойство параметра для маршрута
-    [Parameter] public int? Id { get; set; }
+	// 46.3 Добавляем свойство параметра для маршрута
+	[Parameter] public int? Id { get; set; }
 
-    // 29.3 Добавляем модель данных DTO, добавив ссылку на проект Models
-    // Модели будут использоваться во всём проекте, поэтому добавляем using глобально
-    TeslaCarDTO carModel = new();
-    string title = "Create";
+	// 29.3 Добавляем модель данных DTO, добавив ссылку на проект Models
+	// Модели будут использоваться во всём проекте, поэтому добавляем using глобально
+	TeslaCarDTO carModel = new();
+	string title = "Create";
 
 	// 46.1 Создаём метод инициализации значений компонента
 	// И последующей проверки, создаём мы или редактируем машину
@@ -117,38 +82,34 @@
 	{
 		// Далее, перед реализацией, добавляем ещё один маршрут для редактирования
 
-        // 46.4 Реализовываем проверку, создаём или редактируем
-        if (Id is not null)
-        {
-            // Updating
-            title = "Update";
-            carModel = await _db.GetCar(Id.Value);
+		// 46.4 Реализовываем проверку, создаём или редактируем
+		if (Id is not null)
+		{
+			// Updating
+			title = "Update";
+			carModel = await _db.GetCar(Id.Value);
+		}
+		else
+		{
+			// Creating
+			carModel = new();
+		}
+		// После этого, идём в компонент листа и реализовываем кнопку редактирования
+	}
 
-            // 67. Заполняем модель картинками
-            if (carModel?.TeslaCarImages is not null)
-                carModel.ImageUrls = carModel.TeslaCarImages.Select(x => x.CarImageUrl).ToList();
-        }
-        else
-        {
-            // Creating
-            carModel = new();
-        }
-        // После этого, идём в компонент листа и реализовываем кнопку редактирования
-    }
-
-    // 48.1 Переименовываем метод в универсальный CreateUpdateCarHandler
-    //async Task CreateNewCar()
-    async Task CreateUpdateCarHandler()
-    {
-        // 48.2
-        try
-        {
-            var carDetailsByName = await _db.IsCarUnique(carModel.Name, carModel.Id);
-            if (carDetailsByName is not null)
-            {
-                await _js.ToastrError("Car name already exists.");
-                return;
-            }
+	// 48.1 Переименовываем метод в универсальный CreateUpdateCarHandler
+	//async Task CreateNewCar()
+	async Task CreateUpdateCarHandler()
+	{
+		// 48.2
+		try
+		{
+			var carDetailsByName = await _db.IsCarUnique(carModel.Name, carModel.Id);
+			if (carDetailsByName is not null)
+			{
+				await _js.ToastrError("Car name already exists.");
+				return;
+			}
 
             if (!carModel.Id.Equals(0) && title.Equals("Update"))
             {
@@ -184,144 +145,91 @@
                     _navManager.NavigateTo("car-list");
                 }
 
-                else
-                    await _js.ToastrError("Shit happens.. Not updated!");
-            }
-            else
-            {
-                // Create
-                var createdCar = await _db.CreateCar(carModel);
+				else
+					await _js.ToastrError("Shit happens.. Not updated!");
+			}
+			else
+			{
+				// Create
+				var createdCar = await _db.CreateCar(carModel);
 
-                if (createdCar is not null)
-                {
-                    // 65.1 новый метод AddCarImage
-                    await AddCarImage(createdCar);
-                    // *************************************
-                    await _js.ToastrSuccess($"{createdCar.Name} creating successful!");
-                    _navManager.NavigateTo("car-list");
-                }
-                else
-                    await _js.ToastrError("Shit is happen.. Not created!");
+				if (createdCar is not null)
+				{
+					await _js.ToastrSuccess($"{createdCar.Name} creating successful!");
+					_navManager.NavigateTo("car-list");
+				}
+				else
+					await _js.ToastrError("Shit is happen.. Not created!");
 
-            }
+			}
 
-        }
-        catch (Exception ex)
-        {
-            // Do something with exception
-        }
+		}
+		catch (Exception ex)
+		{
+			// Do something with exception
+		}
 
-        // На этом этапе переходим к внедрению зависимости нашего сервиса, шаг 30
-        // 48.3 Переносим в блок Create
-        //var carDetailsByName = await _db.IsCarUnique(carModel.Name);
+		// На этом этапе переходим к внедрению зависимости нашего сервиса, шаг 30
+		// 48.3 Переносим в блок Create
+		//var carDetailsByName = await _db.IsCarUnique(carModel.Name);
 
-        //if (carDetailsByName is not null)
-        //{
-        //	// TODO: Show error
-        //	return;
-        //}
+		//if (carDetailsByName is not null)
+		//{
+		//	// TODO: Show error
+		//	return;
+		//}
 
-        //var createdCar = await _db.CreateCar(carModel);
+		//var createdCar = await _db.CreateCar(carModel);
 
-        //// TODO: Check creation status
+		//// TODO: Check creation status
 
-        //_navManager.NavigateTo("car-list");
-    }
+		//_navManager.NavigateTo("car-list");
+	}
 
-    // 62.1 Реализовываем метод обработки загрузки
-    async Task ImageUploadHandler(InputFileChangeEventArgs e)
-    {
-        // 73.1 / 73.2 Меняем значение блока отображения загрузки
-        uploadsStart = true;
-        try
-        {
-            var images = new List<string>();
-            if (e.GetMultipleFiles().Count > 0)
-            {
-                foreach (var item in e.GetMultipleFiles(10))
-                {
-                    System.IO.FileInfo fileInfo = new System.IO.FileInfo(item.Name);
+	// 62.1 Реализовываем метод обработки загрузки
+	async Task ImageUploadHandler(InputFileChangeEventArgs e)
+	{
+		try
+		{
+			var images = new List<string>();
+			if (e.GetMultipleFiles().Count > 0)
+			{
+				foreach (var item in e.GetMultipleFiles())
+				{
+					System.IO.FileInfo fileInfo = new System.IO.FileInfo(item.Name);
 
-                    if (fileInfo.Extension.ToLower() == ".jpg" ||
-                        fileInfo.Extension.ToLower() == ".png" ||
-                        fileInfo.Extension.ToLower() == ".jpeg")
-                    {
-                        // 62.2 На этом месте подключаем нужный Using и внедряем библиотеку
-                        var uploadedImagePath = await _fileUpload.UploadFileAsync(item);
-                        images.Add(uploadedImagePath);
-                    }
-                    else
-                    {
-                        await _js.ToastrError("Please select .jpg/.jpeg/.png files only");
-                        return;
-                    }
-                }
+					if (fileInfo.Extension.ToLower() == ".jpg" ||
+						fileInfo.Extension.ToLower() == ".png" ||
+						fileInfo.Extension.ToLower() == ".jpeg")
+					{
+						// 62.2 На этом месте подключаем нужный Using и внедряем библиотеку
+						var uploadedImagePath = await _fileUpload.UploadFileAsync(item);
+						images.Add(uploadedImagePath);
+					}
+					else
+					{
+						await _js.ToastrError("Please select .jpg/.jpeg/.png files only");
+						return;
+					}
+				}
 
-                if (images.Any())
-                {
-                    if (carModel.ImageUrls is not null && carModel.ImageUrls.Any())
-                        carModel.ImageUrls.AddRange(images);
-                    else
-                    {
-                        carModel.ImageUrls = new();
-                        carModel.ImageUrls.AddRange(images);
-                    }
-                }
-                else
-                    await _js.ToastrError("Image uploading failed");
-            }
-            // 73.2 / 73.2 Меняем значение блока отображения загрузки
-            uploadsStart = false;
-        }
-        catch (Exception ex)
-        {
-            await _js.ToastrError(ex.Message);
-        }
-    }
-
-    // 65.2 Реализовываем метод
-    async Task AddCarImage(TeslaCarDTO carDetails)
-    {
-        // Перед реализацией метода нам понадобится внедрить зависимость ITeslaCarRepository и добавить переменную для хранения
-        foreach (var item in carModel.ImageUrls)
-        {
-            if (carModel.TeslaCarImages is null || carModel.TeslaCarImages.Where(x => x.CarImageUrl == item).Count() == 0)
-            {
-                carImage = new()
-                    {
-                        CarId = carDetails.Id,
-                        CarImageUrl = item
-                    };
-                await _imageRepository.CreateTeslaCarImage(carImage);
-            }
-        }
-    }
-
-    // 69.2 Реализуем событие нажатия по кнопке Delete
-    async Task DeleteImage(string imageUrl)
-    {
-        try
-        {
-            var imageIndex = carModel.ImageUrls.FindIndex(x => x == imageUrl);
-            var imageName = imageUrl.Replace($"CarImages/", "");
-
-            // Create car
-            if (carModel.Id.Equals(0) && title == "Create")
-            {
-                var result = _fileUpload.DeleteFile(imageName);
-            }
-            else
-            {
-                // Update car
-                DeletedImageNames ??= new();
-                DeletedImageNames.Add(imageUrl);
-            }
-
-            carModel.ImageUrls.RemoveAt(imageIndex);
-        }
-        catch (Exception ex)
-        {
-            await _js.ToastrError(ex.Message);
-        }
-    }
+				if (images.Any())
+				{
+					if (carModel.ImageUrls is not null && carModel.ImageUrls.Any())
+						carModel.ImageUrls.AddRange(images);
+					else
+					{
+						carModel.ImageUrls = new();
+						carModel.ImageUrls.AddRange(images);
+					}
+				}
+				else
+					await _js.ToastrError("Image uploading failed");
+			}
+		}
+		catch (Exception ex)
+		{
+			await _js.ToastrError(ex.Message);
+		}
+	}
 }
