--- a/TeslaRent_Server/Pages/Car/CarList.razor
+++ b/TeslaRent_Server/Pages/Car/CarList.razor
@@ -27,7 +27,15 @@
 				</tr>
 			</thead>
 			<tbody>
-				@if (Cars is not null && Cars.Any())
+				@if (Cars is null)
+				{
+					<tr>
+						<td colspan="5" class="text-center">
+							<label>Loadin cars from db ... <i class="fas fa-truck-loading" style="font-size: 50px;"></i></label>
+						</td>
+					</tr>
+				}
+				else if (Cars.Any())
 				{
 					@foreach (var item in Cars)
 				   {
@@ -64,7 +72,7 @@
 
 @code {
 	// 31.2 Создаём переменную для хранения всех машин
-	IEnumerable<TeslaCarDTO> Cars = new List<TeslaCarDTO>();
+	IEnumerable<TeslaCarDTO>? Cars;
 
 	// 76.2 / 76.2 Добавляем переменную для отображениея окна
 	bool ShowCloseModal;
@@ -76,6 +84,7 @@
 	// 31.3 Инициализируем массив значениями в методе жизненного цикла
 	protected override async Task OnInitializedAsync()
 	{
+		await Task.Delay(5000);
 		Cars = await _db.GetAllCars();
 	}
 
@@ -86,7 +95,7 @@
 		{
 			// 77.3 --> Идём и модифицируем метод удаления в TeslaCarRepository метод DeleteCar(int carId)
 			await _db.DeleteCar(DeletingCarId.Value);
-			await _js.ToastrSuccess($"{DeletingCarId.Value} deleting successful!");
+			await _js.ToastrSuccess($"Car with ID: {DeletingCarId.Value} deleting successful!");
 
 			Cars = await _db.GetAllCars();
 		}
