--- a/TeslaRent_Server/wwwroot/css/site.css
+++ b/TeslaRent_Server/wwwroot/css/site.css
@@ -105,3 +105,6 @@ a, .btn-link {
     border-radius: 0;
 }
 /***********************************************/
+.modal {
+    background-color: #000c;
+}
