--- a/TeslaRent_Server/_Imports.razor
+++ b/TeslaRent_Server/_Imports.razor
@@ -11,3 +11,6 @@
 @using Models
 @using Business.Repository.IRepository
 @using TeslaRent_Server.Helpers
+
+@*83. Визуальный редактор*@
+@using Blazored.TextEditor
