--- a/TeslaRent_Server/Pages/_Layout.cshtml
+++ b/TeslaRent_Server/Pages/_Layout.cshtml
@@ -13,6 +13,11 @@
     <link href="TeslaRent_Server.styles.css" rel="stylesheet" />
     @*35.2 Подключаем CSS файл*@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css" rel="stylesheet" />
+
+    @*81. CSS ссылки в шаблон*@
+    <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
+    <link href="https://cdn.quilljs.com/1.3.6/quill.bubble.css" rel="stylesheet">
+
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
 </head>
 <body>
@@ -40,5 +45,10 @@
 
     @*43 Подключаем js Sweet Alerts 2*@
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+    @*82. ссылки на скрипты в шаблон*@
+    <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
+    <script src="_content/Blazored.TextEditor/quill-blot-formatter.min.js"></script>
+    <script src="_content/Blazored.TextEditor/Blazored-BlazorQuill.js"></script>
 </body>
 </html>
