--- a/TeslaRent_Server/Pages/_Layout.cshtml
+++ b/TeslaRent_Server/Pages/_Layout.cshtml
@@ -46,6 +46,8 @@
     @*43 Подключаем js Sweet Alerts 2*@
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
+    <script src="https://kit.fontawesome.com/e4fa5c8403.js" crossorigin="anonymous"></script>
+
     @*82. ссылки на скрипты в шаблон*@
     <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
     <script src="_content/Blazored.TextEditor/quill-blot-formatter.min.js"></script>
