--- a/TeslaRent_Server/Shared/NavMenu.razor
+++ b/TeslaRent_Server/Shared/NavMenu.razor
@@ -25,6 +25,11 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> JS in Blazor
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="car/accessories-list">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Car Accessories List
+            </NavLink>
+        </div>
     </nav>
 </div>
 
