--- a/TeslaRent_Server/Pages/Car/CreateCar.razor
+++ b/TeslaRent_Server/Pages/Car/CreateCar.razor
@@ -187,6 +187,7 @@
     public BlazoredTextEditor QuillHtml = new();
 
     List<CarAccessoryDTO> accessories;
+    List<CarAccessoryDTO> accessoriesForAdding = new();
 
     // 46.1 Создаём метод инициализации значений компонента
     // И последующей проверки, создаём мы или редактируем машину
@@ -270,7 +271,7 @@
                 // 84.4 При создании получаем данные из визуального редактора
                 carModel.Details = await QuillHtml.GetHTML();
 
-                var updateCarResult = await _db.UpdateCar(carModel.Id, carModel);
+                var updateCarResult = await _db.UpdateCar(carModel.Id, carModel, accessoriesForAdding);
                 if (updateCarResult is not null)
                 {
                     // 68. Обновление картинок при редактировании машины
@@ -464,8 +465,7 @@
                 // Получаем обьъект для добавления
                 var accessory = await _acc.GetSingleAccessoryAsync(accId);
 
-                accessory?.Car?.Add(carModel);
-                carModel.CarAccessories.Add(accessory);
+                accessoriesForAdding.Add(accessory);
 
                 var listItem = accessories.FirstOrDefault(x => x.Id == accessory.Id);
                 accessories.Remove(listItem);
