--- a/TeslaRent_Server/Pages/Car/CarAccessoriesList.razor
+++ b/TeslaRent_Server/Pages/Car/CarAccessoriesList.razor
@@ -5,6 +5,9 @@
 
 @inject IJSRuntime _js
 
+@*106. Добавляем атрибут доступа только для авторизованных пользователей*@
+@attribute [Authorize]
+
 <div class="row">
     <div class="col-6">
         <h1 class="text-info my-2">Accessories</h1>
