--- a/TeslaRent_Server/Pages/Car/CarList.razor
+++ b/TeslaRent_Server/Pages/Car/CarList.razor
@@ -8,6 +8,11 @@
 @*90.1 Внедряем менеджер для получения базового пути*@
 @inject NavigationManager _navManager
 
+
+@*113. Добавить в админ зоне к атрибутам валидации закрытие по ролям*@
+@*106. Добавляем атрибут доступа только для авторизованных пользователей*@
+@attribute [Authorize(Roles = Common.SD.ADMIN_ROLE)]
+
 @*27.2 Создаём разметку компонента*@
 <div class="row mt-4">
 	<div class="col-8">
