--- a/TeslaRent_Server/Shared/NavMenu.razor
+++ b/TeslaRent_Server/Shared/NavMenu.razor
@@ -30,6 +30,11 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Car Accessories List
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="user-list">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> User List
+            </NavLink>
+        </div>
     </nav>
 </div>
 
